Update personal information in index.html

--- a/html/index.html
+++ b/html/index.html
@@ -67,7 +67,7 @@
       <div class="brand">
         <div class="logo">🕹️</div>
         <div>
-          <h1>Hola — Soy [Tu Nombre]</h1>
+          <h1>Hola — Soy Ignacio Pignat</h1>
           <p class="lead">Desarrollador de videojuegos · Programador · Game Designer</p>
         </div>
       </div>
@@ -143,3 +143,4 @@
   </script>
 </body>
 </html>
+
