--- a/html/index.html
+++ b/html/index.html
@@ -3,21 +3,21 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Bienvenido — Desarrollador de Videojuegos</title>
+  <title>Portafolio de Ignacio Pignat</title>
   <meta name="description" content="Portafolio de desarrollo de videojuegos: demos, proyectos y contacto.">
   <meta name="keywords" content="videojuegos, desarrollo, programador, Unity, game developer">
-  <meta name="author" content="[Tu Nombre]">
+  <meta name="author" content="Ignacio Pignat">
   <meta name="robots" content="index, follow">
   <meta property="og:title" content="Desarrollador de Videojuegos">
   <meta property="og:description" content="Portafolio y demos de un desarrollador de videojuegos.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://tu-dominio-o-usuario.github.io/">
+  <meta property="og:url" content="https://IgnacioPignat.Github.io/">
   <meta property="og:image" content="assets/cover.jpg">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Desarrollador de Videojuegos">
   <meta name="twitter:description" content="Portafolio, proyectos y contacto.">
   <meta name="twitter:image" content="assets/cover.jpg">
-  <link rel="canonical" href="https://tu-dominio-o-usuario.github.io/">
+  <link rel="canonical" href="https://IgnacioPignat.Github.io/">
 
   <!-- GitHub Pages CNAME -->
   <!-- Crea un archivo llamado CNAME en la raíz de tu repositorio con el dominio personalizado, por ejemplo:  -->
@@ -77,7 +77,7 @@
       <h2>Bienvenido a mi portafolio</h2>
       <p class="meta">Creo experiencias interactivas usando Unity, Python, Scratch. Me interesa llevar ideas desde el prototipo hasta la publicación en PC y plataformas digitales.</p>
       <div class="ctas">
-        <a class="btn primary" href="https://github.com/tu-usuario" target="_blank" rel="noopener">Ver Proyectos</a>
+        <a class="btn primary" href="https://github.com/ignaciopignat-afk" target="_blank" rel="noopener">Ver Proyectos</a>
        
       </div>
       
@@ -87,12 +87,12 @@
       <h2 style="margin-top:28px">Proyectos destacados</h2>
       <div class="grid">
         <div class="project card">
-          <h3>Proyecto A — Nombre</h3>
-          <p>Descripción. Repositorio: <a href="https://github.com/tu-usuario/proyecto-a" target="_blank">github</a></p>
+          <h3>Proyecto A — Scratch</h3>
+          <p>Descripción. Repositorio: <a href="https://github.com/ignaciopignat-afk/IgnacioPignat.Github.io/html/Proyecto A" target="_blank">github</a></p>
         </div>
         <div class="project card">
-          <h3>Proyecto B</h3>
-          <p>Muy pronto</p>
+          <h3>Proyecto B - Python</h3>
+          <p>Descripción. Repositorio: <a href="https://github.com/ignaciopignat-afk/IgnacioPignat.Github.io/html/Proyecto A" target="_blank">github</a></p>
         </div>
         <div class="project card">
           <h3>Proyecto C</h3>
@@ -143,4 +143,5 @@
   </script>
 </body>
 </html>
+
 
