--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
   <meta property="og:title" content="Desarrollador de Videojuegos">
   <meta property="og:description" content="Portafolio y demos de un desarrollador de videojuegos.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://tu-dominio-o-usuario.github.io/">
+  <meta property="og:url" content="https://ignaciopignat-afk
+IgnacioPignat.Github.io/">
   <meta property="og:image" content="assets/cover.jpg">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Desarrollador de Videojuegos">
   <meta name="twitter:description" content="Portafolio, proyectos y contacto.">
   <meta name="twitter:image" content="assets/cover.jpg">
-  <link rel="canonical" href="https://tu-dominio-o-usuario.github.io/">
+  <link rel="canonical" href="https://ignaciopignat-afk
+IgnacioPignat.Github.io/">
 
   <!-- GitHub Pages CNAME -->
   <!-- Crea un archivo llamado CNAME en la raíz de tu repositorio con el dominio personalizado, por ejemplo:  -->
@@ -67,7 +69,7 @@
       <div class="brand">
         <div class="logo">🕹️</div>
         <div>
-          <h1>Hola — Soy [Tu Nombre]</h1>
+          <h1>Hola — Soy Ignacio Pignat</h1>
           <p class="lead">Desarrollador de videojuegos · Programador · Game Designer</p>
         </div>
       </div>
@@ -143,3 +145,4 @@
   </script>
 </body>
 </html>
+
